add: seguridad para algunos endpoint
